--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,7 +7,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --blue: #a8cfef;
+  --blue: #3490dc;
   --indigo: #6574cd;
   --purple: #9561e2;
   --pink: #f66d9b;
@@ -20,7 +20,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #54626e;
+  --primary: #3490dc;
   --secondary: #6c757d;
   --success: #38c172;
   --info: #6cb2eb;
@@ -155,12 +155,12 @@ sup {
 }
 
 a {
-  color: #0ef4f0;
+  color: #3490dc;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #2cf5c3;
+  color: #1d68a7;
   text-decoration: underline;
 }
 
